# advent

./: .clang-format  .prettierrc.json  CMakeLists.txt  CMakePresets.json
cmake/: config.h.cin
modules/2015/day02/source/: main.c
modules/advent/include/: advent.h
modules/advent/include/advent/: error_return.h  line_iterator.h  math.h  string.h
modules/advent/source/: advent.c  line_iterator.c  math.c  string.c
modules/day01/: input.txt
modules/day01/source/: main.c
